Fix word wrapping issues

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -17,6 +17,12 @@ details > summary {
   margin: 0 0 ($line-height-computed / 2);
 }
 
+p {
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
+}
+
 pre {
   font-size: $font-size-small;
 }
